@@ -228,6 +228,9 @@ Trunk -  Unreleased
     HIVE-1184. Fix Expression Not In Group By Key error.
     (Paul Yang via zshao)
 
+    HIVE-1200. Fix CombineHiveInputFormat
+    (Zheng Shao via namit)
+
 Release 0.5.0 -  Unreleased
 
   INCOMPATIBLE CHANGES
